--- a/index.html
+++ b/index.html
@@ -155,14 +155,15 @@
 
     <!-- Address -->
     <address>
-        <strong>Twitter, Inc.</strong><br>
-        1355 Market Street, Suite 900<br>
-        San Francisco, CA 94103<br>
-        <abbr title="Phone">P:</abbr> (123) 456-7890
+        <strong>Address</strong><br>
+        Jl. Deandles<br>
+        Paciran Lamongan<br>
+        Jawa Timur<br>
+        <abbr title="Phone"><span class="glyphicon glyphicon-earphone"> : </span></abbr> +6285855238552
     </address>
     <address class="email">
-        <strong>Full Name</strong><br>
-        <a href="mailto:#">first.last@example.com</a>
+        <strong>Mohammad Nafis Nailul Murom</strong><br>
+        <a href="mailto:#">mohammadnafis602@gmail.com</a>
     </address>
     <!-- Akhir Address -->
 
